# POI-study

./: HW1_houpu.ipynb  HW4_houpu.ipynb  HW5_houpu.ipynb  MID_TERM.ipynb  POI_study.ipynb  README.md  address_score_check.py  cosine_simularity.ipynb  framework.drawio  google_foursquare.ipynb  google_safegraph.ipynb  match_by_name.py  match_by_name_old.py  overture_table.csv  pyproject.toml  query.overture_poi.py  query_foursquare_poi.py  query_google_poi.py  query_osm_poi.py  research_design.drawio  search_spatial_candidates.py  some_findings.ipynb  table_a.csv  workflow.drawio
1.data_query/: query.overture_poi.py  query_foursquare_poi.py
2.data_engenering/: data_engineering.ipynb  foursquare_poi_dataprocess.py  google_poi_dataprocess.py  overture_dataprocess.py  safegraph_poi_dataprocess.py
2.match_func/: calculate_similarity_check.py  match_by_name.py
3.match_func/: address_score_check.py
4.analysis_funcs/: add_distance_bins_to_point.py  plot_bubble_distancebins.py  plot_missmate_by_dist.py  plot_multi_category_coverage.py  plot_variable_width_missmate.py  process_stats_v.py  summarize_category_match_rate.py  summarize_match_miss_by_dist_bin.py
5.analysis_fig/: analysis.ipynb
5.match_proc/: google_foursquare.ipynb  google_osm.ipynb  google_oveture.ipynb  google_safegraph.ipynb
analysis_fig/: analysis.ipynb
poi_study/: __init__.py  analysis.py  lc_analysis.py  plotting.py  plotting_old.py
