[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "poi_study"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "geopandas",
    "pandas",
    "numpy",
    "statsmodels",
    "matplotlib",
    "requests",
    "shapely",
]